<resources>
    <string name="app_name">Readeo</string>
    <string name="mail_address">Mail address</string>
    <string name="password">Password</string>
    <string name="password_forgotten">Password forgotten ?</string>
    <string name="city">City</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="pseudo">Pseudo</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="read">Read</string>
    <string name="to_read">To read</string>
    <string name="reading">Reading</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="summary">Summary</string>
    <string name="quotes_number_replacement">Quote(s) (%d)</string>
    <string name="review">Review</string>
    <string name="review_s_content">Review\'s content</string>
    <string name="edit_a_review">Edit a review</string>
    <string name="edit_a_quote">Edit a quote</string>
    <string name="profile_s_description">Profile\'s description</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet ?</string>
    <string name="log_in">Log in</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account ?</string>
    <string name="updating">Updating...</string>
    <string name="update_progress">%d out of %d</string>
    <string name="social">Social</string>
    <string name="library">Library</string>
    <string name="login_error">The login information are not valid</string>
    <string name="offline_dialog_message">There is not network access, would you like to use the offline mode ?</string>
    <string name="offline_never_connected">You should at least connect once on the app in order to use the 
        offline mode</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="account_settings">Account settings</string>
    <string name="form_fields_invalid">The fields contains some error(s) : pseudo or email already taken or 
        missing fields.</string>
    <string name="form_update_fields">The updates has been taken into account and will be 
        visible soon.</string>
    <string name="not_available_offline">Feature unavailable while offline</string>
    <string name="account_successfully_created">Account successfully created</string>
    <string name="not_communicated">Not communicated</string>
    <string name="separator">-</string>
    <string name="reading_list_title_replacement">Reading list : %s</string>
    <string name="publish">Publish</string>
    <string name="reviews_number_replacement">Review(s) (%d)</string>
    <string name="no_books_in_book_list">You have no books into this book list.</string>
    <string name="would_you_like_to_save_the_current_quote">Would you like to save the current quote ?</string>
    <string name="book_title">Book Title</string>
    <string name="share_this_review">Share this review</string>
    <string name="update">Update</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="need_password_for_account_deletion">The password is required for the account 
        deletion.</string>
    <string name="password_confirmation_doesnt_match">The password confirmation doesn\'t match
        .</string>
    <string name="no_profile_description">No profile description</string>
    <string name="delete_account_lbl">Delete account</string>
    <string name="search_for_a_user">Search for a user</string>
    <string-array name="book_filters">
        <item>None</item>
        <item>Category</item>
        <item>Author</item>
        <item>Title</item>
    </string-array>

</resources>
